# london-home-finder

./: .dependency-cruiser.cjs  .gitignore  .importlinter  .pre-commit-config.yaml  .prettierignore  2026-07-22_01-03-06_rightmove-data-exploration_handoff.md  AGENTS.md  LICENSE  README.md  eslint.config.mjs  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tach.toml  tsconfig.base.json  tsconfig.json  turbo.json
.agents/skills/babysit/: SKILL.md
.agents/skills/babysit/agents/: openai.yaml
.agents/skills/deep-interview/: SKILL.md
.agents/skills/handoff/: SKILL.md
.agents/skills/monorepo-init/: SKILL.md
.agents/skills/monorepo-init/agents/: openai.yaml
.agents/skills/monorepo-init/references/: agents-md.md  archetypes.md  decision-framework.md  python-stack.md  retrofit.md  scaffold-components.md  typescript-stack.md
.agents/skills/summarise-pr/: SKILL.md
.github/workflows/: ci.yml
apps/api/: AGENTS.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/src/lhf/api/: app.py  cli.py  openapi.py
apps/api/src/lhf_api/: __init__.py  app.py  cli.py  migrations.py  openapi.py
apps/api/tests/: test_app.py  test_openapi.py
apps/db/: AGENTS.md  alembic.ini  pyproject.toml
apps/db/alembic/: env.py
apps/db/alembic/versions/: 0001_create_listings.py
apps/db/src/lhf/db_app/: __init__.py  migrations.py  models.py
apps/db/src/lhf_db_app/: migrations.py
apps/db/tests/: test_migrations.py
apps/web/: AGENTS.md  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/tests/: page.test.tsx
contracts/: openapi.json
docs/: STRUCTURE.md
libs/api-client/: AGENTS.md  openapi-ts.config.ts  package.json  tsconfig.json  tsconfig.test.json
libs/api-client/scripts/: check-generated.mjs
libs/api-client/src/: client.ts  index.ts
libs/api-client/tests/: client.test.ts
libs/backend/: AGENTS.md  pyproject.toml
libs/backend/src/lhf_backend/: __init__.py  _models.py  api.py
libs/backend/tests/: test_listing.py  test_repository.py
libs/db/: AGENTS.md  pyproject.toml
libs/db/src/lhf/db/: __init__.py  session.py
libs/db/tests/: test_session.py
libs/listings/: AGENTS.md  pyproject.toml
libs/listings/src/lhf/listings/: __init__.py  _listing_row.py  listing.py  listing_repository.py
libs/listings/tests/: test_listing.py  test_repository.py
libs/repository/: AGENTS.md  pyproject.toml
libs/repository/src/lhf/repository/: __init__.py  protocol.py
libs/repository/tests/: test_protocol.py
tests/integration/: test_fixture_ingestion.py
tests/integration/fixtures/: london_listings.json
tools/: check_structure.py
tools/scraper/: AGENTS.md  pyproject.toml
tools/scraper/src/lhf/scraper/: __init__.py  cli.py  fixture.py
tools/scraper/src/lhf_scraper/: cli.py  fixture.py
tools/scraper/tests/: test_fixture.py
