[project]
name = "lhf-api"
version = "0.1.0"
description = "FastAPI application for London Home Finder"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "lhf-db",
    "lhf-listings",
    "pydantic==2.13.4",
    "uvicorn==0.51.0",
]

[project.scripts]
lhf-api = "lhf.api.cli:main"

[tool.uv.sources]
lhf-db = { workspace = true }
lhf-listings = { workspace = true }

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhf"]
