[project]
name = "lhf-db-app"
version = "0.1.0"
description = "Alembic migration composition root for London Home Finder"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.18.5",
    "lhf-db",
    "lhf-listings",
    "SQLAlchemy==2.0.51",
]

[tool.uv.sources]
lhf-db = { workspace = true }
lhf-listings = { workspace = true }

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhf"]
