[project]
name = "lhf-listings"
version = "0.1.0"
description = "Listing domain and persistence for London Home Finder"
requires-python = ">=3.13"
dependencies = [
    "lhf-db",
    "lhf-repository",
    "SQLAlchemy==2.0.51",
]

[tool.uv.sources]
lhf-db = { workspace = true }
lhf-repository = { workspace = true }

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhf"]
