[project]
name = "lhf-repository"
version = "0.1.0"
description = "Shared repository protocols for London Home Finder"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lhf"]
